LaTeX - Moved modified perlin, fixed viability and decreased the gap between items in itemize lists

--- a/LaTeX/discussion.tex
+++ b/LaTeX/discussion.tex
@@ -13,6 +13,7 @@
 The implementation has a number of major limitations. In the interest of overview, a list of limitations that will be discussed is provided below.
 	
 \begin{itemize}
+	\setlength\itemsep{0.01cm}
 	\item Maximum of three districts.
 	\item All roads are straight.
 	\item One-to-one relationship between cell and building.
