--- a/LaTeX/theoretical_framework.tex
+++ b/LaTeX/theoretical_framework.tex
@@ -17,7 +17,7 @@ Perlin noise is a type of gradient noise. It was developed by Ken Perlin in 1983
 	\label{fig:fade}
 \end{figure}
 	
-\section{Online vs offline}
+\section{Online vs offline}\label{sec:online-offline}
 There are two ways to use PCG algorithms, either offline or online. Online is when the content is generated while the game is being played or in a short loading screen just before the player can start playing. This allows content that is adapted to the individual player and semi-infinite content\cite{PCGGames}. In the game Left 4 Dead\cite{Left4Dead} PCG is used by analyzing the players behavior and altering the experience. This could be considered a mixture of artificial intelligence and online PCG.
 \par
 Offline generation is when the content is being generated before the player starts playing. This could be done by the developers before releasing the game. Offline generation is useful when generating complicated content that is too slow to generate online. These are the definitions used in this thesis.
@@ -26,11 +26,11 @@ Offline generation is when the content is being generated before the player star
 When developing the implementation, the following requirements were set to ensure that the result is viable in games.
 	
 \begin{itemize}
-	\item \textbf{Validity:} The city does not have to be realistic but the city must be credible for the player to enjoy the environment. The player should not lose immersion because of broken geometry within the city. The city should also differ from a completely random city. If it is possible to distinguish a generated city from a random one, it is considered valid.
+	\item \textbf{Validity:} The city does not have to be realistic but the city must be credible for the player to enjoy the environment. The player should not lose immersion because of broken geometry within the city. The city should also look better than a city generated a random. If a city is prettier and looks more natural than a city generated at random, it is considered valid.
 		
 	\item \textbf{Determinism:} The generation should be deterministic. This means that the exact same city can be generated again with the same seed. Nothing should be purely random. This is important so that the user has control over the output of the implementation.
 		
-	\item \textbf{Performance:} The city should be generated within a reasonable time frame to be viable in an online setting. A game should never have loading screens for any long period of time. This implementation have a time limit of 15 seconds as Paradox Interactive AB a game company set this as a time limit in Melins and Bengtssons collaboration about procedural generation with the company\cite{FloorPlanPCG}.  If this limit is excedded the implementation may still be viable in a offline setting.
+	\item \textbf{Performance:} The city should be generated within a reasonable time frame to be viable in an online setting. A game should never have loading screens for any long period of time. This implementation have a time limit of 15 seconds as Paradox Interactive AB a game company set this as a time limit in Melins and Bengtssons collaboration about procedural generation with the company\cite{FloorPlanPCG}. The implementation must be viable to use in an online setting as defined in \ref{sec:online-offline}.
 		
 	\item \textbf{Flexibility: } The implementation should be able to generate many different cities with different looks.
 \end{itemize} 
