LaTeX - Added user study images

--- a/LaTeX/results.tex
+++ b/LaTeX/results.tex
@@ -1,9 +1,50 @@
-The results from the user study and the implementation are presented here. In order to measure the viability of the cities the following three requirements were set Validity, Determinism, Performance and Flexibility, definitions can be found at \ref{sec:viability}.
+The results from the user study and the implementation are presented here. In order to measure the viability of the cities the following three requirements were set Validity, Determinism, Performance and Flexibility, definitions can be found at \ref{sec:viability}. The images used during the user study are shown below:
+
+\begin{figure}[h]
+	\centering
+	\begin{subfigure}{0.4\textwidth}
+		\centering
+		\includegraphics[width=0.9\linewidth]{"Images/bad parameters"}
+		\caption*{City 1 with bad parameters.}
+		\label{fig:bad-parameters}
+	\end{subfigure}
+	\begin{subfigure}{0.4\textwidth}
+		\centering
+		\includegraphics[width=0.9\linewidth]{"Images/good parameters 02"}
+		\caption*{City 2 with good parameters.}
+		\label{fig:good-parameters-02}
+	\end{subfigure}
+	%\caption{City 1 and 2.}
+	\label{fig:city12}
+\end{figure}
+
+\begin{figure}[h]
+	\centering
+	\begin{subfigure}{0.4\textwidth}
+		\centering
+		\includegraphics[width=0.9\linewidth]{"Images/full random"}
+		\caption*{City 3 generated at random.}
+		\label{fig:full-random}
+	\end{subfigure}
+	\begin{subfigure}{0.4\textwidth}
+		\centering
+		\includegraphics[width=0.9\linewidth]{"Images/good parameters 03"}
+		\caption*{City 4 with good parameters.}
+		\label{fig:good-parameters-03}
+	\end{subfigure}
+	%\caption{City 3 and 4.}
+	\label{fig:city34}
+\end{figure}
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=0.36\textwidth]{"Images/random districts"}
+	\caption*{City 5 with random districts.}
+	\label{fig:random-districts}
+\end{figure}
 	
 \section{User study}
 A user study with 25 participants was conducted. The participants answered questions about images of procedurally generated cities from the implementation created. The user study aimed to measure the viability the cities have in a game.
-	
-%The user study had 25 participants. The figure \ref{fig:pie-chart-often-play} shows that most participants play games more than once a week, therefore they can be expected to have knowledge about game environments.
 
 % how often do you play?
 \par
@@ -11,7 +52,7 @@ The participants of the user study is divided into three groups: \textit{avid ga
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.65\textwidth]{"Images/OftenPlay"}
+	\includegraphics[width=0.5\textwidth]{"Images/OftenPlay"}
 	\caption{Pie chart of how often the participants play games.}
 	\label{fig:pie-chart-often-play}
 \end{figure}
@@ -21,7 +62,7 @@ The main focus of the user study is to determine if a city generated using our a
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.7\textwidth]{"Images/UseInGame"}
+	\includegraphics[width=0.5\textwidth]{"Images/UseInGame"}
 	\caption{Pie chart of which cities the participants think could be used in a game.}
 	\label{fig:pie-chart-use-in-game}
 \end{figure}
@@ -67,6 +108,7 @@ Figure \ref{fig:pie-chart-natural-least-natural} shows the participants answers 
 \end{figure}
 
 % best roads
+\newpage
 Another fundamental part of the generation process is the road network. To determine the impact that this stage has on the city, we asked the participants which of the cities had the best road network. Figure \ref{fig:pie-chart-road-network} shows the participants answers to this question.
 
 \begin{figure}[h]
@@ -77,7 +119,6 @@ Another fundamental part of the generation process is the road network. To deter
 \end{figure}
 
 % ugliest/prettiest
-\newpage
 By asking a broad question about the look of the cities and cross referencing the result against their perceived viability in games, a correlation between look and viability can be determined. This is the intention behind asking the participants which of the cities looks the ugliest and which one looks the prettiest. Figure \ref{fig:pie-chart-ugly-pretty} shows the result of these questions.
 
 \begin{figure}[h]
