--- a/LaTeX/discussion.tex
+++ b/LaTeX/discussion.tex
@@ -2,12 +2,14 @@
 	Based on the user study it can be argued that all cities shown are perceived to be viable in games by many, however the study suggest that cities one and three are the least viable as shown in figure \ref{fig:pie-chart-use-in-game}. City one were created with bad parameters on purpose and city three were completely random. Thus, it is not surprising that these cities seem to be perceived as least viable in games.
 	
 	\subsection{City 1}
-		The city generated with bad parameters are the most prevalent in two parts of the user study. As seen in Figure \ref{fig:pie-chart-random} the participants in the study found it the most random city. This was unexpected results as the most random city in reality is city three, the randomly generated city. It can be seen in Figure \ref{fig:pie-chart-least-natural} that this city is by a majority seen as the least natural city. There is limited evidence, but this may show that procedurally generated cities are highly dependent upon their generation parameters. As the bad parameters generated city are peceived as both the most random and the least natural city. This city is also a contender for the ugliest city as illustrated in Figure \ref{fig:pie-chart-ugly}.
+		The city generated with bad parameters are the most prevalent in two parts of the user study. As seen in Figure \ref{fig:pie-chart-random} the participants in the study found it the most random city. This was unexpected results as the most random city is city three, the randomly generated city. It can be seen in Figure \ref{fig:pie-chart-least-natural} that this city is by a majority seen as the least natural city. There is limited evidence, but this may show that procedurally generated cities are highly dependent upon their generation parameters. As the bad parameters generated city are peceived as both the most random and the least natural city. This city is also a contender for the ugliest city as illustrated in Figure \ref{fig:pie-chart-ugly}.
 		
-	\subsection{City 2 and 4}
-		Generated with similar parameters but different seeds these two cities should in theory be very similar. These cities were hypothised to be the most viable to use in games since they were created using the full procedural generation pipeline with parameters that was thought to be good. Figure \ref{fig:pie-chart-use-in-game} show that these two cities are perceived as more viable than cities one and three. This was expected but on the contrary city five seems to be even more viable. Hence, it is possible that the generation pipeline is flawed and can be improved upon. As illustrated in Figure \ref{fig:pie-chart-road-network} city four seems to have much better road network than city two. Considering that they were generated with similar parameters but the results diverge to a noticable degree (haps siffror?) it may be the case that some aspects of the cities differs more than expected.
+	\subsection{City 2 and 4} \label{ssec:city2-3}
+		Generated with similar parameters but different seeds these two cities should in theory be very similar. These cities were hypothised to be the most viable to use in games since they were created using the full procedural generation pipeline with parameters that was thought to be good. Figure \ref{fig:pie-chart-use-in-game} show that these two cities are perceived as more viable than cities one and three. This was expected but on the contrary city five seems to be even more viable. Hence, it is possible that the generation pipeline is flawed and can be improved upon. As illustrated in Figure \ref{fig:pie-chart-road-network} city four seems to have much better road network than city two. Considering that they were generated with similar parameters but the results diverge to a noticable degree it may be the case that some aspects of the cities differs more than expected.
 	\subsection{City 3}
+		Randomly generated this city seems to be the least viable in games along with city one according to the user study as shown in Figure \ref{fig:pie-chart-use-in-game}. This was expected as procedurally generated content should be more viable than randomly generated content. Where city three is the most prevalent is in the repetitive cities and ugliest cities charts, illustrated in Figure \ref{fig:pie-chart-repetitive} and \ref{fig:pie-chart-ugly}. This city is perceived as the second most random city after city one as presented in Figure \ref{fig:pie-chart-random}. The results that this city looks the most repetitive to the participants is not expected. The least coherency and most variance in buildings should be in city three as there is no districts to control the buildings nor roads variables. To analyze why city three is perceived as repetitive even though it should have the most variety is out of scope for this thesis.
 	\subsection{City 5}
+		Presented in Figure \ref{fig:pie-chart-use-in-game} city five is the most viable city for games according to the user study. This is the city with randomly generated districts but otherwise use the same pipeline as cities one, two and four. Randomly generated districts affect where the different buildings may be placed along with the block size. This may result in layouts such as a house surrounded by skyscrapers. This city was seen as the most natural city by most participants, this can be seen in Figure \ref{fig:pie-chart-natural}. The participants found this city to have the second best road network after city four as shown in Figure \ref{fig:pie-chart-road-network}. This may suggest that the participants appreciate some randomness in the city but with the parameters the districts provide the house and road generation. This further supports the hypothesis that the pipeline used in the implementation can be improved upon as suggested in \ref{ssec:city2-3}.
 	
 \section{Implementation analysis}
 The implementation has a number of major limitations. In the interest of overview, a list of limitations that will be discussed is provided below.
