--- a/LaTeX/method.tex
+++ b/LaTeX/method.tex
@@ -68,7 +68,7 @@ To explore the procedural generation of a city, a desktop application was create
 		\label{fig:normal-and-modified-perlin}
 	\end{figure}
 		
-	\subsubsection{Districts}
+	\subsection{Districts}
 	The \textit{district} PCG generates a 2D grid with cells where each cell contains a \textit{district} number. Each cell is in the later stages filled with grass, roads or buildings. Each cell within the grid represents an area of land in the city. These areas are square shaped with a length of 10 meters which equates to a total area of 100 square meters for each cell.
 		
 	\par
