LaTeX - Changed caption on a figure

--- a/LaTeX/introduction.tex
+++ b/LaTeX/introduction.tex
@@ -14,19 +14,19 @@ In this thesis, the possibility of procedurally generating a city with Perlin no
 	
 	\begin{figure}[h]
 		\centering
-		\begin{subfigure}{0.35\textwidth}
+		\begin{subfigure}{0.45\textwidth}
 			\centering
 			\includegraphics[width=0.9\linewidth]{"Images/rand vacant"}
-			\caption{Building placement using \textit{rand}.}
+			\caption{Buildings placed using \textit{rand}.}
 			\label{fig:rand-vacant}
 		\end{subfigure}
-		\begin{subfigure}{0.35\textwidth}
+		\begin{subfigure}{0.45\textwidth}
 			\centering
 			\includegraphics[width=0.9\linewidth]{"Images/perlin vacant"}
-			\caption{Building placement using Perlin noise.}
+			\caption{Buildings placed using Perlin noise.}
 			\label{fig:perlin-vacant}
 		\end{subfigure}
-		\caption{Side effect of using Perlin noise like a PRNG.}
+		\caption{Difference between Perlin noise and rand.}
 		\label{fig:perlin-rand-vacant}
 	\end{figure}
 	
