LaTeX - Tiny fixuru, not even big even

--- a/LaTeX/results.tex
+++ b/LaTeX/results.tex
@@ -140,26 +140,26 @@ The results from the user study and the implementation are presented here. In or
 
 
 \section{Data collection}
-	The following data were collected generating cities using the implementation. The parameters controlling the city were all randomly set during each generation. The cities were generated 100 times for each size respectively i.e. size 10x10 were generated 100 times and size 25x25 were generated 100 times. The variable measured are all the average number of the 100 samples. The generation time is measured in seconds, the size is measured in cells with a width and a height e.g. size 10x10 has 100 cells. The table is read from left to the right.
+	The following data were collected generating cities using the implementation. The parameters controlling the city were all randomly set during each generation. The cities were generated 100 times for each size respectively. The variable measured are all the average number of the 100 samples. The generation time is measured in seconds, the size is measured in cells with a width and a height. The table is read from left to the right.
 	
 	\begin{center}
 		\begin{tabular}{||c | c c c c||} 
 			\hline
 			Size & Generation time & Perlin noise calls & Buildings & Vacant \\ [0.9ex] 
 			\hline\hline
-			10x10 & 0.0017 & 155 & 36 & 38 \\ 
+			10x10 & 0.0017s & 155 & 36 & 38 \\ 
 			\hline
-			25x25 & 0.0056 & 745 & 213 & 157 \\
+			25x25 & 0.0056s & 745 & 213 & 157 \\
 			\hline
-			50x50 & 0.018 & 2997 & 838 & 664 \\
+			50x50 & 0.018s & 2997 & 838 & 664 \\
 			\hline
-			100x100 & 0.065 & 12083 & 3534 & 2619 \\
+			100x100 & 0.065s & 12083 & 3534 & 2619 \\
 			\hline
-			250x250 & 0.378 & 75112 & 21012 & 18588 \\
+			250x250 & 0.378s & 75112 & 21012 & 18588 \\
 			\hline
-			500x500 & 1.529 & 302188 & 87591 & 72086 \\
+			500x500 & 1.529s & 302188 & 87591 & 72086 \\
 			\hline
-			1000x1000 & 6.750 & 1216841 & 367258 & 268168 \\ [2ex] 
+			1000x1000 & 6.750s & 1216841 & 367258 & 268168 \\ [2ex] 
 			\hline
 		\end{tabular}
 	\end{center}
