LaTeX - Putting stuff on new pages

--- a/LaTeX/method.tex
+++ b/LaTeX/method.tex
@@ -238,7 +238,8 @@ To explore the procedural generation of a city, a desktop application was create
 		
 	\subsection{Experiment analysis method}
 	The answers from all the answered questionnaires is visualized in several graphs. The images all show a different city generated with a specific set of variables which was mapped to the participant's answers. For example: one city is completely randomly generated. Do the participants notice this or does it look like the generated cities? Is the PCG city with bad parameters perceived as more random than the city with good parameters? The data was analyzed to answer such questions and was then used to draw a conclusion about the generated cities viability in games.
-			
+	
+	\newpage
 	\section{Questionnaire form} \label{ssssec:questionnaire}
 	This is a study of how you perceive different generated cities. All answers are completely anonymous. Images of five different generated cities will be shown to you and we ask that you answer a questionnaire about these images. Each image has a number associated with it. Answer the questionnaire by simply drawing a circle around one of the numbers representing the image that you believe is the best answer to the question.
 			
