--- a/LaTeX/results.tex
+++ b/LaTeX/results.tex
@@ -139,6 +139,7 @@ The results from the user study and the implementation are presented here. In or
 	\end{figure}
 
 
+\newpage
 \section{Data collection}
 	The following data were collected generating cities using the implementation. The parameters controlling the city were all randomly set during each generation. The cities were generated 100 times for each size respectively. The variable measured are all the average number of the 100 samples. The generation time is measured in seconds, the size is measured in cells with a width and a height. The table is read from left to the right.
 	
