LaTeX - Changed a sentence in the introduction

--- a/LaTeX/introduction.tex
+++ b/LaTeX/introduction.tex
@@ -10,7 +10,7 @@ In this thesis, the possibility of procedurally generating a city with Perlin no
 	Perlin Noise is the PCG technique chosen for every stage of the city generation. This technique was mainly chosen because of how fast it is to implement as implementation time is very important in game development.
 	There are many ways to procedurally generate a city, but many of them are very complicated which often means long implementation time. From a developer's perspective there is not much use for PCG if the implementation time is equal or greater to the time it would take to handcraft every single element.
 	
-	Perlin noise generates noise with properties that may be interpreted as more natural than purely random. The noise has a structure and form that was thought that it may be a good addition to cities as cities also have structure and form and are not completely random. The difference between random and Perlin noise is illustrated in Figure \ref{fig:perlin-rand-vacant}.
+	Perlin noise generates noise with properties that may be interpreted as more natural than purely random. The noise has a natural form, making it a useful technique when generating natural looking content. The difference between random and Perlin noise is illustrated in Figure \ref{fig:perlin-rand-vacant}.
 	
 	\begin{figure}[h]
 		\centering
