LaTeX - Fixed spelling errors and added a reference

--- a/LaTeX/citations.bib
+++ b/LaTeX/citations.bib
@@ -304,3 +304,11 @@
 	Author = {{Wohlin, Claes, 1959- Runeson Per H{\"o}st, Martin Ohlsson, Magnus C. Regnell, Bj{\"o}rn Wessl{\'e}n, Anders }},
 	Title = {Experimentation in software engineering},
 	Year = {2012}}
+
+@webpage{ModifiedNoise,
+	Author={{Solarian Programmer}},
+	Date = {2017},
+	Note = {Webpage, Modified Perlin Noise function, https://solarianprogrammer.com/2012/07/18/perlin-noise-cpp-11},
+	Url = {https://solarianprogrammer.com/2012/07/18/perlin-noise-cpp-11},
+	Bdsk-Url-1 = {https://solarianprogrammer.com/2012/07/18/perlin-noise-cpp-11}}
+
