--- a/LaTeX/method.tex
+++ b/LaTeX/method.tex
@@ -1,7 +1,7 @@
 Most related work focus on one of two things: procedurally generating unique building meshes\cite{PseudoInfiniteCities} or procedurally generating large cities consisting of similar looking buildings\cite{InfiniteCities}. This work focuses instead on the procedurally generated placement of existing meshes in varied districts. The concept of districts breaks up the repetitive and self-similar nature of city by introducing distinct changes in appearance between them.
 
 	\subsection{Districts}
-	The generation process starts with the generation of \textit{districts}. A \textit{districts} is an abstract representation of an area of the city. It controls what type of buildings it contains, the minimum and maximum height of these buildings and how densely populated the area is with these buildings. The \textit{districts} have a semi-random deterministic spread across the city. There is no constraints on the distribution of the \textit{districts}. This means that one seed may produce a city where 90\% of the city is made up of one \textit{district}. There are no constraints to prevent this because this would hinder the variability of the cities generated. The \textit{districts} typically have a lot of blocks where no other districts are competing. But at the borders between districts there is a lot more variation, this is referred to as \textit{border competition}. Here a single block may contain buildings from all three \textit{districts}. This was done to avoid hard borders between the \textit{districts}. The hard borders were considered to look strange and may compromise the cities viability in games. The \textit{districts} were deemed important as they provide variation throughout the city.
+	The generation process starts with the generation of \textit{districts}. A \textit{district} is an abstract representation of an area of the city. It controls what type of buildings it contains, the minimum and maximum height of these buildings and how densely populated the area is with these buildings. The \textit{districts} have a semi-random deterministic spread across the city. There are no constraints on the distribution of the \textit{districts}. This means that one seed may produce a city where 90\% of the city is made up of one \textit{district}. There are no constraints to prevent this because this would hinder the variability of the cities generated. The \textit{districts} typically have a lot of blocks where no other districts are competing. But at the borders between districts there is a lot more variation, this is referred to as \textit{border competition}. Here a single block may contain buildings from all three \textit{districts}. This was done to avoid hard borders between the \textit{districts}. The hard borders were considered to look strange and may compromise the cities viability in games. The \textit{districts} were deemed important as they provide variation throughout the city.
 		
 	\subsection{Blocks}
 	The next stage in the process is the generation of \textit{blocks}. In this work, a \textit{block} is defined as an area enclosed by four roads. Looking at aerial photographs of large cities, like the one in Figure \ref{fig:new-york}, there is a certain pattern in the way roads are laid out. A few major roads stretches through the city and smaller, perpendicular roads connecting them together. It was decided to mimic this style. Since a \textit{block} is another abstract representation of an area, it is actually the roads that make them up. The first step of generating \textit{blocks} is to generate the main roads running through the city. After the main roads have been generated, smaller roads are generated in between, connecting the main roads together. After all roads have been generated, the city has affectively been divided into a non-uniform grid. Each cell in this grid is a \textit{block}. The size of each \textit{block} depends on what \textit{district} it belongs to.
@@ -14,7 +14,7 @@ Most related work focus on one of two things: procedurally generating unique bui
 	\end{figure}
 		
 	\subsection{Buildings}
-	The final stage is the generation of \textit{buildings}. Each \textit{buildings} is made up of three meshes: the bottom, middle and top mesh. By dividing a building into sections, it is possible to assemble different pieces and generate new \textit{buildings}. This is a powerful way to use combinatorics to generate more content. For example, creating two \textit{buildings} would result in two unique \textit{buildings}. Whereas creating two bottom, middle and top sections would result in eight unique \textit{buildings}. Upon generation of a \textit{building}, the attributes of its \textit{district} is taken into consideration. What sections to combine, the minimum and maximum height as well as the density of \textit{buildings}, is all dictated by the \textit{district}.
+	The final stage is the generation of \textit{buildings}. Each \textit{building} is made up of three meshes: the bottom, middle and top mesh. By dividing a building into sections, it is possible to assemble different pieces and generate new \textit{buildings}. This is a powerful way to use combinatorics to generate more content. For example, creating two \textit{buildings} would result in two unique \textit{buildings}. Whereas creating two bottom, middle and top sections would result in eight unique \textit{buildings}. Upon generation of a \textit{building}, the attributes of its \textit{district} is taken into consideration. What sections to combine, the minimum and maximum height as well as the density of \textit{buildings}, is all dictated by the \textit{district}.
 
 \section{Implementation}
 To explore the procedural generation of a city, a desktop application was created. The application provides the end user with an interface that allows for the configuration of parameters along with some statistics. 
@@ -45,10 +45,10 @@ To explore the procedural generation of a city, a desktop application was create
 	\subsection{Modified Perlin noise}
 	Depending on the \textit{frequency} and \textit{modifications} of the noise the results can be very different. The steps at which the data is sampled is what the \textit{frequency} is. If the results of the Perlin noise is changed further this is what \textit{modifications} is. The modified Perlin noise is used when generating the \textit{districts}. This noise has much sharper changes in values than regular Perlin noise. Perlin noise without modification returns a value very close to 0.5 most of the time. This poses a problem when generating certain things. The \textit{districts} core position for example should have some spread across the city and not be close to each other. The Perlin noise is modified in the following way when generating a \textit{district's} X-axis position; and used similarly for other parts of the generation:\\*[0.1cm]
 	
-	\texttt{float noise = 20 * this->noise->generate(1.13x * x, 1.22 * y);\\
+	\texttt{float noise = 20 * this->noise->generate(1.13 * x, 1.22 * y);\\
 		noise = (noise - floor(noise));}\\*[0.1cm]
 		
-	The \textit{frequency} of this modified noise is 1.134 on the X-axis and the \textit{modification} is \texttt{noise = (noise - floor(noise))}.
+	The \textit{frequency} of this modified noise is 1.13 on the X-axis and the \textit{modification} is \texttt{noise = (noise - floor(noise))} \cite{ModifiedNoise}.
 	The difference between modified and not modified Perlin noise is visualized in Figure \ref{fig:normal-and-modified-perlin}.
 		
 	\begin{figure}[h]
@@ -118,7 +118,7 @@ To explore the procedural generation of a city, a desktop application was create
 	\end{figure}
 		
 	\subsection{Buildings}
-		The final stage of the generation process it the generation of \textit{buildings}. At this point the map contains values that indicate whether a cell is a road or a vacant slot belonging to a \textit{district}. This stage goes through the whole map, skipping over any roads. For each cell that the algorithm visits, three of the \textit{districts} parameters are considered: minimum height, maximum height and density. The algorithm retrieves a Perlin noise value for the cell and compares it against the density threshold to determine whether to place a \textit{buildings} or leave the cell vacant. If a \textit{buildings} is placed, the algorithm uses Perlin noise to choose a bottom, middle and top sections. It chooses these sections from the list of available sections that belong to the \textit{district}. Since the result of Perlin noise is a value between zero and one, it is easy to multiply this result with the number of available sections in order to choose one. The final step of the algorithm determines the height of the \textit{buildings} by multiplying the difference between the maximum height and the minimum height with the result from the Perlin noise and then adding the minimum height. The results of the \textit{buildings} generation is not stored in the map, but in a separate list of building sections that can later be rendered. The placement of vacant tiles is stored in the map. In Figure \ref{fig:map-grass} the city can be seen when all generation stages are done. The numbers 0-2 represent what district the buildings there are from, 8-9 are small and big roads and 7 represents the vacant cells.
+		The final stage of the generation process it the generation of \textit{buildings}. At this point the map contains values that indicate whether a cell is a road or a vacant slot belonging to a \textit{district}. This stage goes through the whole map, skipping over any roads. For each cell that the algorithm visits, three of the \textit{districts} parameters are considered: minimum height, maximum height and density. The algorithm retrieves a Perlin noise value for the cell and compares it against the density threshold to determine whether to place a \textit{building} or leave the cell vacant. If a \textit{buildings} is placed, the algorithm uses Perlin noise to choose a bottom, middle and top sections. It chooses these sections from the list of available sections that belong to the \textit{district}. Since the result of Perlin noise is a value between zero and one, it is easy to multiply this result with the number of available sections in order to choose one. The final step of the algorithm determines the height of the \textit{buildings} by multiplying the difference between the maximum height and the minimum height with the result from the Perlin noise and then adding the minimum height. The results of the \textit{buildings} generation is not stored in the map, but in a separate list of building sections that can later be rendered. The placement of vacant tiles is stored in the map. In Figure \ref{fig:map-grass} the city can be seen when all generation stages are done. The numbers 0-2 represent what district the buildings there are from, 8-9 are small and big roads and 7 represents the vacant cells.
 		
 	\begin{figure}
 		\centering
