--- a/LaTeX/results.tex
+++ b/LaTeX/results.tex
@@ -63,7 +63,7 @@ The results from the user study and the implementation are presented here. In or
 	\begin{figure}[h]
 		\centering
 		\includegraphics[width=0.5\textwidth]{"Images/UseInGame"}
-		\caption{Pie chart of which cities the participants think could be used in a game.}
+		\caption{Bar chart of which cities the participants think could be used in a game.}
 		\label{fig:pie-chart-use-in-game}
 	\end{figure}
 	
