--- a/LaTeX/theoretical_framework.tex
+++ b/LaTeX/theoretical_framework.tex
@@ -30,7 +30,7 @@ When developing the implementation, the following requirements were set to ensur
 		
 	\item \textbf{Determinism:} The generation should be deterministic. This means that the exact same city can be generated again with the same seed. Nothing should be purely random. This is important so that the user has control over the output of the implementation.
 		
-	\item \textbf{Performance:} The city should be generated within a reasonable time frame to be viable in an online setting. A game should never have loading screens for any long period of time. This implementation have a time limit of 15 seconds as Paradox Interactive AB a game company set this as a time limit in Melins and Bengtssons collaboration about procedural generation with the company\cite{FloorPlanPCG}. The implementation must be viable to use in an online setting as defined in \ref{sec:online-offline}.
+	\item \textbf{Performance:} The city should be generated within a reasonable time frame to be viable in an online setting. A game should never have loading screens for a long period of time. This implementation have a time limit of 15 seconds as Paradox Interactive AB a game company set this as a time limit in Melins and Bengtssons collaboration about procedural generation with the company\cite{FloorPlanPCG}. The implementation must be viable to use in an online setting as defined in \ref{sec:online-offline}.
 		
 	\item \textbf{Flexibility: } The implementation should be able to generate many different cities with different looks.
 \end{itemize} 
