--- a/LaTeX/conclusion.tex
+++ b/LaTeX/conclusion.tex
@@ -14,4 +14,4 @@ This section will describe a number of directions for future work.
 	The generation process outlined in this work requires a two-dimensional grid in which to generate the city. This results in straight roads and rectangular blocks. Generating curved roads would make the city look more interesting and natural. This is another area where procedural mesh generation would be beneficial.
 		
 	\subsection{Terrain integration}
-	Any city in our application is generated on flat terrain. A popular application of Perlin noise is terrain generation. By taking the terrain into consideration when generating a city, the two ares of content generation could be combined.
+	Any city in our application is generated on flat terrain. A popular application of Perlin noise is terrain generation. By taking the terrain into consideration when generating a city, the two areas of content generation could be combined.
